--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,5 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <title>soundbox-ii</title>
+    <link data-trunk rel="sass" href="index.sass" />
   </head>
 </html>
