--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>soundbox-ii</title>
-    <link data-trunk rel="sass" href="index.sass" />
+    <link data-trunk rel="scss" href="index.scss" />
   </head>
 </html>
