--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Copyright (C) 2021-2022  Daniel Lambert. Licensed under GPL-3.0-or-later, see /app/COPYING file for details -->
 <html>
   <head>
     <meta charset="utf-8" />
